Criado path customizada para http get para o Usuario
