# Back-end/PVWApi/PVWApi/Models/Convidado.cs
@@ -15,8 +15,8 @@ namespace PVWApi.Models
         [Column(TypeName = "int")]
         public int QuantidadeConvidado { get; set; }
 
-        /*[Column(TypeName = "int")]
-        public int CasamentoId { get; set; }*/
+        [Column(TypeName = "int")]
+        public int CasamentoId { get; set; }
                 
         [ForeignKey("CasamentoId")]
         public virtual Casamento? Casamento { get; set; }
